--- a/web-ui/public/index.html
+++ b/web-ui/public/index.html
@@ -22,11 +22,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.6.6/video-js.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.15.4/video-js.min.css" media="print" onload="this.media='all'">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.6.6/video.min.js"></script>
-    <script src="https://player.live-video.net/1.2.0/amazon-ivs-videojs-tech.min.js"></script>
-    <script src="https://player.live-video.net/1.2.0/amazon-ivs-quality-plugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.15.4/video.min.js"></script>
+    <script src="https://player.live-video.net/1.4.0/amazon-ivs-videojs-tech.min.js"></script>
+    <script src="https://player.live-video.net/1.4.0/amazon-ivs-quality-plugin.min.js"></script>
 
     <title>React App</title>
   </head>
