chore: update ivs sdk

--- a/web-ui/public/index.html
+++ b/web-ui/public/index.html
@@ -25,10 +25,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.17.0/video-js.min.css" media="print" onload="this.media='all'">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.17.0/video.min.js"></script>
-    <script src="https://player.live-video.net/1.7.0/amazon-ivs-videojs-tech.min.js"></script>
-    <script src="https://player.live-video.net/1.7.0/amazon-ivs-quality-plugin.min.js"></script>
+    <script src="https://player.live-video.net/1.8.0/amazon-ivs-videojs-tech.min.js"></script>
+    <script src="https://player.live-video.net/1.8.0/amazon-ivs-quality-plugin.min.js"></script>
 
-    <title>React App</title>
+    <title>Amazon IVS - Auto-record to S3</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
